k8s-infra/kyverno-policies/restrict-serviceaccount-access.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-serviceaccount-access
spec:
  validationFailureAction: enforce
  rules:
    - name: disallow-default-sa
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Default service account should not be used."
        pattern:
          spec:
            serviceAccountName: "!default"
